add general config

--- a/configuration/application.yml
+++ b/configuration/application.yml
@@ -3,3 +3,7 @@ eureka:
     registry-fetch-inteval-seconds: 5
     service-url:
       defaultZone: http://localhost:8700/eureka/
+
+config:
+  server:
+    student-key: Hello There, from Config Server
