--- a/configuration/application.yml
+++ b/configuration/application.yml
@@ -7,3 +7,12 @@ eureka:
 config:
   server:
     student-key: Hello There, from Config Server
+
+spring:
+  data:
+    cassandra:
+      keyspace-name: royforthewin
+      port: 9042
+      contact-points: localhost
+      username: cassandra
+      password: cassandra
